# LEDAtools

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_new.md  binomials.hpp  bit_error_probabilities.hpp  constant_weight_encodable_bits.cpp  globals.hpp  isd_cost_estimate.hpp  logging.hpp  parameter_generator.cpp  parameter_sets.csv  partitions_permanents.hpp  proper_primes.hpp  work_factor_computation.cpp  work_factor_computation_parallel.cpp
examples/: CMakeLists.txt  isd_cost_estimate_ex.cpp
include/: globals.hpp  isd_cost_estimate.hpp  logging.hpp  partitions_permanents.hpp  proper_primes.hpp
include/utils/: binomials.hpp  bit_error_probabilities.hpp  isd_cost_estimate.hpp  logging.hpp  partitions_permanents.hpp
src/: CMakeLists.txt  constant_weight_encodable_bits.cpp  enumeration_complexity.cpp  isd_cost_estimate.cpp  logging.cpp  parameter_generator.cpp  work_factor_computation_parallel.cpp
src/tools/: CMakeLists.txt  constant_weight_encodable_bits.cpp  enumeration_complexity.cpp  parameter_generator.cpp  work_factor_computation.cpp  work_factor_computation_parallel.cpp
src/utils/: CMakeLists.txt  binomials.cpp  bit_error_probabilities.cpp  isd_cost_estimate.cpp  logging.cpp  partitions_permanents.cpp
